# ldp-group-mean

./: .gitignore  .ruff.toml  ARTIFACT-EVALUATION.md  LICENSE  README.md  _tasks.py  pyproject.toml
ldp_group_mean/: __init__.py
ldp_group_mean/ldp_group_mean/: __init__.py  group_mean.py  group_mean_bernoulli.py  group_mean_laplace.py  group_mean_piecewise.py  group_mean_waudby.py  helpers.py
ldp_group_mean/simulation/: __init__.py  simulation_group_mean.py  simulation_group_mean_imbalance.py  simulation_group_mean_nprr.py  simulation_group_mean_piecewise.py  simulation_group_mean_sizes.py  util.py
ldp_group_mean/simulation/data/: __init__.py  group_data.py  mimic.py
ldp_group_mean/simulation/data/synthetic/: __init__.py  group_freq_geometric.py  group_mean_constant.py  group_mean_extreme.py  group_mean_normal.py  group_mean_uniform.py  synthetic.py
ldp_group_mean/simulation/processing/: __init__.py  process_mean.py  processing.py
scripts/: preprocess_results.py  run_simulation.py
scripts/plotting/: generate_group_mappings.py  paper.mplstyle  plot_data.py  plot_mean_cases.py  plot_mean_imbalance.py  plot_mean_nprr.py  plot_mean_piecewise.py  plot_mean_sizes.py  plot_paper.py
scripts/sql/: extract_adm.sql
